// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "github.com/stratumn/go-node/cli/grpc/ext/ext.proto";

package stratumn.node.core.app.ping.grpc;

option go_package = "github.com/stratumn/go-node/core/app/ping/grpc;grpc";

// The ping service definition.
service Ping {
  // Pings an address and streams responses.
  rpc Ping (PingReq) returns (stream Response) {
    option (stratumn.node.cli.ext.method_desc) = "Ping a peer";
  }
}

// The ping request message.
message PingReq {
  bytes peer_id = 1 [
    (stratumn.node.cli.ext.field_desc) = "Peer ID",
    (stratumn.node.cli.ext.field_required) = true,
    (stratumn.node.cli.ext.field_base58) = true
  ];
  uint32 times = 2 [
    (stratumn.node.cli.ext.field_desc) = "The number of pings"
  ];
}

// The response message containing the latenty.
message Response {
  int64 latency = 1 [(stratumn.node.cli.ext.field_duration) = true];
}

