// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package stratumn.indigonode.core.crypto;

option go_package = "github.com/stratumn/go-indigonode/core/crypto;crypto";

// Types of digital keys supported.
enum KeyType {
    RSA = 0;
    ECDSA = 1;
	Ed25519 = 2;
	Secp256k1 = 3;
}

// A digital signature.
message Signature {
    KeyType key_type = 1;
    bytes public_key = 2;
    bytes signature = 3;
}